fix: fix application